# gjive

./: .gitignore  README.md  app.py  generate_data.py  generate_tests.py  noise_test.py  noiseless_test.py  pyproject.toml
app/: app.py  app_utils.py
app/pages/: Datasets.py
data/app_simulation_test/: simulation.npz
data/app_simulation_test1/: metadata.json
data/basic/: metadata.json  simulation.npz
data/basic_noise/: metadata.json  simulation.npz
data/ilovejulia/: metadata.json  simulation.npz
data/simulation_test/: metadata.json  simulation.npz
data/tests/repro_1/: metadata.json
data/tests/repro_2/: simulation.npz
data/tests/repro_3/: metadata.json  simulation.npz
error_analysis/: experiment_result.py  graphs.ipynb  paramater_sweep.py  seed_sweep.py  variation.py  variation_utils.py
error_analysis/csvs/: variation_in_K.csv
error_analysis_results/: K_sweep.csv
estimates/basic/: estimate.npz  metadata.json
estimates/basic_noise/: estimate.npz  metadata.json
gjive/: __init__.py  dataset.py  estimate.py  estimate_class.py  estimate_spec.py  generate.py  gjive.py  perturbations.py  simulation_spec.py  specifications.py  utils.py
pages/: Datasets.py
results/: K_sweep.csv  K_sweep_parallel.csv
scripts/: error.py  error_analysis.py  error_plots.py  generate_data.py  generate_tests.py  irlb_test.py  noise_test.py  noiseless_test.py  visualize_error.py
