[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gjive"
version = "0.1.0"
description = "A package for generating and evaluating joint and individual variation ensemble simulations."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10"
]

[tool.setuptools.packages.find]
include = ["gjive", "gjive.*, error_analysis, error_analysis*"]
exclude = ["tests*", "app*", "scripts*", "data*", "estimates*", "plots*", "figures*", "results*"]
